# scorpio-analyst

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  config.toml  install.ps1  install.sh  skills-lock.json
crates/scorpio-cli/: CLAUDE.md  Cargo.toml
crates/scorpio-cli/src/: lib.rs  main.rs
crates/scorpio-cli/src/cli/: analyze.rs  mod.rs  report.rs  update.rs
crates/scorpio-cli/src/cli/setup/: health_check.rs  mod.rs  model_selection.rs  steps.rs
crates/scorpio-cli/src/report/: coverage.rs  final_report.rs  mod.rs  provenance.rs  valuation.rs
crates/scorpio-cli/tests/: install_release_contract.rs  report_json_roundtrip.rs
crates/scorpio-core/: Cargo.toml
crates/scorpio-core/examples/: etf_live_test.rs  etf_options_gex_live_test.rs  etf_pack_live_test.rs  etf_quote_live_test.rs  finnhub_live_test.rs  fred_live_test.rs  futu_opend_smoke.rs  nport_live_test.rs  reddit_live_test.rs  sec_edgar_live_test.rs  yfinance_live_test.rs  yfinance_options_chain_live_test.rs
crates/scorpio-core/migrations/: 0002_add_symbol_and_schema_version.sql
crates/scorpio-core/migrations/transcript_cache/: 0001_create_transcript_cache.sql
crates/scorpio-core/src/: config.rs  constants.rs  lib.rs  market_time.rs  observability.rs  rate_limit.rs  settings.rs
crates/scorpio-core/src/agents/: mod.rs
crates/scorpio-core/src/agents/analyst/: common.rs  mod.rs  registry.rs  sentiment.rs  technical.rs  traits.rs
crates/scorpio-core/src/agents/auditor/: mod.rs  prompt.rs
crates/scorpio-core/src/agents/fund_manager/: agent.rs  mod.rs  prompt.rs  tests.rs  validation.rs
crates/scorpio-core/src/agents/researcher/: bearish.rs  bullish.rs  common.rs  mod.rs  moderator.rs  prompt.rs
crates/scorpio-core/src/agents/risk/: aggressive.rs  common.rs  conservative.rs  mod.rs  moderator.rs  neutral.rs  prompt.rs
crates/scorpio-core/src/agents/shared/: json.rs  mod.rs  prompt.rs  technical_projection.rs  usage.rs  valuation_prompt.rs
crates/scorpio-core/src/agents/trader/: mod.rs  prompt.rs  schema.rs  tests.rs
crates/scorpio-core/src/analysis_packs/: builtin.rs  completeness.rs  mod.rs  registry.rs  selection.rs
crates/scorpio-core/src/analysis_packs/common/: mod.rs
crates/scorpio-core/src/analysis_packs/crypto/: digital_asset.rs  mod.rs
crates/scorpio-core/src/analysis_packs/equity/: baseline.rs  mod.rs
crates/scorpio-core/src/analysis_packs/etf/: baseline.rs  mod.rs
crates/scorpio-core/src/analysis_packs/manifest/: pack_id.rs  schema.rs  strategy.rs  tests.rs
crates/scorpio-core/src/app/: mod.rs
crates/scorpio-core/src/backtest/: mod.rs
crates/scorpio-core/src/data/: alpha_vantage.rs  entity.rs  etf_benchmarks.rs  finnhub.rs  fred.rs  mod.rs  provider_impls.rs  routing.rs  sec_edgar.rs  sec_edgar_nport.rs  sec_risk_return.rs  symbol.rs  transcript_cache.rs
crates/scorpio-core/src/data/adapters/: catalysts.rs  estimates.rs  events.rs  mod.rs  transcripts.rs
crates/scorpio-core/src/data/futu/: client.rs  frame.rs  messages.rs  mod.rs  select.rs
crates/scorpio-core/src/data/gnews/: mod.rs  news_provider.rs
crates/scorpio-core/src/data/reddit/: client.rs  mod.rs  news_provider.rs  types.rs
crates/scorpio-core/src/data/sec_edgar/: mod.rs  nport.rs
crates/scorpio-core/src/data/traits/: derivatives.rs  fundamentals.rs  macroeconomic.rs  mod.rs  news.rs  onchain.rs  options.rs  price_history.rs  social.rs  tokenomics.rs
crates/scorpio-core/src/data/yfinance/: client.rs  data_source.rs  etf.rs  financials.rs  mod.rs  news.rs  ohlcv.rs  options.rs  price.rs  session.rs  summary.rs
crates/scorpio-core/src/domain/: class.rs  mod.rs  symbol.rs  tests.rs
crates/scorpio-core/src/indicators/: batch.rs  gex.rs  mod.rs  tools.rs  utils.rs
crates/scorpio-core/src/prompts/: bundle.rs  mod.rs  templating.rs  validation.rs
crates/scorpio-core/src/providers/: acp.rs  copilot.rs  mod.rs
crates/scorpio-core/src/providers/factory/: agent.rs  agent_test_support.rs  client.rs  copilot_auth.rs  discovery.rs  error.rs  mod.rs  retry.rs  text_retry.rs
crates/scorpio-core/src/state/: account.rs  analyst_output.rs  auditor.rs  crypto.rs  derived.rs  equity.rs  evidence.rs  execution.rs  fundamental.rs  market_volatility.rs  mod.rs  news.rs  proposal.rs  provenance.rs  reporting.rs  sentiment.rs  technical.rs  thesis.rs  token_usage.rs  trading_state.rs  valuation_derive.rs
crates/scorpio-core/src/testing/: mod.rs  prompt_render.rs  rate_clients.rs  runtime_policy.rs
crates/scorpio-core/src/valuation/: mod.rs  registry.rs
crates/scorpio-core/src/valuation/equity/: default.rs  mod.rs
crates/scorpio-core/src/valuation/etf/: category_norms.rs  mod.rs  premium_discount.rs  tracking_error.rs
crates/scorpio-core/src/workflow/: builder.rs  context_bridge.rs  mod.rs  pack_classifier.rs  snapshot.rs  test_support.rs  topology.rs
crates/scorpio-core/src/workflow/pipeline/: mod.rs  (+4 more)
crates/scorpio-core/tests/: activation_path_audit.rs  app_runtime.rs  foundation_edge_cases.rs  options_outcome_smoke.rs  prompt_bundle_regression_gate.rs  reddit_prefetch_lane_split.rs  second_consumer_abstraction.rs  settings_roundtrip.rs  state_roundtrip.rs  workflow_auditor_task.rs  workflow_observability_tasks.rs  workflow_pipeline_e2e.rs  workflow_pipeline_structure.rs
crates/scorpio-core/tests/support/: workflow_observability_pipeline_support.rs  workflow_observability_task_support.rs  workflow_pipeline_e2e_support.rs  workflow_pipeline_make_pipeline.rs  workflow_pipeline_stubbed_support.rs
crates/scorpio-reporters/: CLAUDE.md  Cargo.toml
crates/scorpio-reporters/src/: json.rs  lib.rs
crates/scorpio-reporters/src/terminal/: coverage.rs  etf.rs  final_report.rs  mod.rs  provenance.rs  valuation.rs
crates/scorpio-reporters/tests/: chain.rs  json.rs  terminal.rs
crates/scorpio-server/: Cargo.toml  Dockerfile  README.md
crates/scorpio-server/config/: development.yaml  production.yaml  test.yaml
crates/scorpio-server/src/: app.rs  lib.rs  main.rs
crates/scorpio-server/src/controllers/: health.rs  mod.rs
crates/scorpio-server/tests/: health.rs
(+508 files in other folders)
