[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/BigtoC/scorpio-analyst"
description = "Rust-native multi-agent portfolio manager and financial analyst team"

# Centralized dependency versions. Crate-level manifests consume entries via
# `foo.workspace = true`; this keeps every shared dep pinned in one place and
# eliminates cross-crate version drift once the two-crate split lands.
[workspace.dependencies]
# LLM framework
rig-core = "0.32.0"
schemars = { version = "1", features = ["chrono04"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Rate limiting
governor = "0.10.4"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
inquire = "0.9"

# File utilities
tempfile = "3"

# Utilities
colored = "3"
comfy-table = "7"
figlet-rs = "1.0.0"
nonzero_ext = "0.3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"] }
finnhub = "0.2.2"
yfinance-rs = "0.7.2"
kand = "0.2.2"
num-traits = "0.2"

# Graph orchestration
graph-flow = { version = "0.5.0", features = ["rig"] }
async-trait = "0.1"

# Phase snapshot persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Self-update and release verification
self_update = { version = "0.44", default-features = false, features = ["reqwest", "archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate", "rustls"] }
semver = "1"
sha2 = "0.11"
hex = "0.4"

# Dev-only
proptest = "1"
mockall = "0.13"
pretty_assertions = "1"
paft-money = "0.7"
rust_decimal = "1"
flate2 = "1.1"
tar = "0.4"
zip = "8"
