[package]
name = "scorpio-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# LLM framework
rig-core.workspace = true
schemars.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Rate limiting
governor.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Secrets
secrecy.workspace = true

# Unique identifiers
uuid.workspace = true

# Date/time
chrono.workspace = true
chrono-tz.workspace = true

# File utilities
tempfile.workspace = true

# Utilities
nonzero_ext.workspace = true
futures.workspace = true
reqwest.workspace = true
finnhub.workspace = true
yfinance-rs.workspace = true
kand.workspace = true
num-traits.workspace = true

# Graph orchestration
graph-flow.workspace = true
async-trait.workspace = true

# Phase snapshot persistence
sqlx.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
paft-money.workspace = true
paft-domain.workspace = true
rust_decimal.workspace = true

[features]
default = []
## Expose internal test helpers for integration tests. Not for production use.
test-helpers = []
