[package]
name = "scorpio-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# LLM framework
rig-core.workspace = true
schemars.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-langfuse.workspace = true

# Rate limiting
governor.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Secrets
secrecy.workspace = true

# Unique identifiers
uuid.workspace = true

# Date/time
chrono.workspace = true
chrono-tz.workspace = true

# File utilities
tempfile.workspace = true

# Utilities
nonzero_ext.workspace = true
futures.workspace = true
reqwest.workspace = true
url.workspace = true
libc.workspace = true
finnhub.workspace = true
yfinance-rs.workspace = true
rss.workspace = true
kand.workspace = true
num-traits.workspace = true
quick-xml.workspace = true
statrs.workspace = true
zip.workspace = true
# Futu OpenD frame body checksums (44-byte header SHA-1)
sha1.workspace = true
# paft 0.8 exposes per-unit values as `Price`/`Decimal` (e.g. option implied
# volatility); rust_decimal is paft's underlying Decimal impl and provides the
# `ToPrimitive` conversion to f64 used at the data-adapter boundary.
rust_decimal.workspace = true

# Graph orchestration
graph-flow.workspace = true
async-trait.workspace = true

# Phase snapshot persistence
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
paft-money.workspace = true
paft-domain.workspace = true
paft-market.workspace = true
paft-aggregates.workspace = true
rust_decimal.workspace = true
wiremock.workspace = true

[features]
default = []
## Expose internal test helpers for integration tests. Not for production use.
test-helpers = []
