[package]
name = "scorpio-reporters"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Sibling core crate — shared runtime/domain types.
scorpio-core = { path = "../scorpio-core" }

# Async runtime + trait support
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Date/time
chrono.workspace = true

# Terminal formatting (TerminalReporter)
colored.workspace = true
comfy-table.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
